# mysql-mcp-server

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt  test_mcp_server.py
