[project]
name = "mysql-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "mysql-connector-python>=9.4.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0.0",
]
